# OS-II

./: .gitignore  1  README.md  run_redeploy_and_log.sh  todo.sh
.github/workflows/: perf-gate.yml
erts/example/mini_beam_esp32/: CMakeLists.txt  README.md
erts/example/mini_beam_esp32/espidf_app/: CMakeLists.txt
erts/example/mini_beam_esp32/espidf_app/main/: CMakeLists.txt  app_main.c
erts/example/mini_beam_esp32/flows/: nano33_sensor_pwm.flow  stress_fast_poll.flow  stress_multi_sender.flow
erts/example/mini_beam_esp32/include/: mb_errors.h  mb_hal.h  mb_heap.h  mb_process.h  mb_scheduler.h  mb_term.h  mb_types.h  mb_vm.h
erts/example/mini_beam_esp32/src/: main_flow_host.c  main_host.c  main_mailbox_host.c  main_multiproc_host.c  main_regression_host.c  main_stability_host.c  mb_hal_espidf.c  mb_hal_nrf52.c  mb_hal_stub.c  mb_heap.c  mb_scheduler.c  mb_vm.c
erts/example/mini_beam_esp32/tools/: flow_compile.escript
erts/example/mini_beam_esp32/zephyr_app/: CMakeLists.txt  README.md  README_DEBUG_BOARD.md  analyze_event_perf.sh  bootstrap_zephyr_workspace.sh  capture_recovery_evidence.sh  check_perf_regression.sh  check_recovery_log.sh  golden_single_mast.sh  manual_flash_nano33.sh  perf_gate_rc.sh  preflight_profile_check.sh  prj.conf  promote_soak_baseline.sh  redeploy_and_log.sh  reflash_nano33_sense.sh  run_parallel_soaks.sh  run_soak_profile.sh  start_serial_log.sh  validate_caps_term.sh  validate_profile_bindings.sh
erts/example/mini_beam_esp32/zephyr_app/boards/: README.md  arduino_nano_33_ble.overlay  arduino_nano_33_ble_nrf52840_sense.overlay  nrf52840dk_nrf52840.overlay
erts/example/mini_beam_esp32/zephyr_app/profiles/: nano33_ble_sense.os2
erts/example/mini_beam_esp32/zephyr_app/src/: flow_generated.h  main.c
skills/otp-port/: SKILL.md
skills/otp-port/agents/: openai.yaml
skills/otp-port/references/: atomvm-nrf52-implementation-status.md  beam-book-study-map.md  erts-beam-map.md  esp32-porting-gap-analysis.md  nrf52840-register-machine-fit.md
system/config/: perf_gate_rc.env
system/doc/: CALL_FOR_CONTRIBUTIONS.md  HARDWARE_DSL_PAMPHLET_10_MIN.md  M4_RECOVERY_EVIDENCE.md  M5_BASELINE_MANIFEST.csv  M5_BASELINE_NOMINAL_SOAK.csv  M5_BASELINE_NOMINAL_SOAK_10m_2026-02-24.json  M5_BASELINE_RECOVERY.csv  M5_PERF_BASELINE.md  M5_PERF_BASELINE_FLOW.md  M5_SOAK_PROFILES.md  M5_STRESS_TEST_REPORT.md  OS2_CAPABILITY_DSL_PLAN.md  OS2_RESEARCH_REPORT.md  P0_P1_PROOF_2026-02-25.txt  P0_P1_VALIDATION_REPORT_2026-02-25.md  README_GITHUB_STORY.md  RESEARCH_PLAN_MSC_PHD.md  SOUL_OF_OS2_PART1.md  USE_CASE_SUPPLY_ROBOT.md  blog_os2_mini_beam_progress.md  mini_beam_design_decisions.md  mini_beam_esp32_contract_v1.md  mini_beam_esp32_plan.md  os2_architecture.md  os2_architecture_ascii.md  os2_architecture_diagram.md  os2_board_profiles.md  os2_nano33_flash_research_2026-02-23.md
